--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
   "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Jose melendez",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Melendezj18/5e-character-tracker-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Melendezj18/5e-character-tracker-server/issues"
+  },
+  "homepage": "https://github.com/Melendezj18/5e-character-tracker-server#readme"
 }
